--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "Suroj M",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mssql": "^10.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
